--- a/HighchartsNET/HighchartsNET.csproj
+++ b/HighchartsNET/HighchartsNET.csproj
@@ -43,6 +43,10 @@
     <Compile Include="HighCharts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="js\highcharts.js" />
+    <EmbeddedResource Include="js\jquery.min.js" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
